--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 	<description>Telegram bot for blood pressure logging</description>
 
 	<properties>
+	    <maven.compiler.target>1.8</maven.compiler.target>
+	    <maven.compiler.source>1.8</maven.compiler.source>
 		<org.projectlombok.version>1.18.24</org.projectlombok.version>
 		<org.telegram.version>5.5.0</org.telegram.version>
 	</properties>
@@ -22,6 +24,8 @@
 			<version>${org.projectlombok.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		
+		<!-- Telegram bot API -->
 		<dependency>
 	        <groupId>org.telegram</groupId>
 	        <artifactId>telegrambots</artifactId>
@@ -32,5 +36,22 @@
 	        <artifactId>telegrambotsextensions</artifactId>
 	        <version>${org.telegram.version}</version>
     	</dependency>
+    	
+    	<!-- Logging -->
+    	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>1.7.36</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-reload4j -->
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-reload4j</artifactId>
+		    <version>1.7.36</version>
+		    <scope>test</scope>
+		</dependency>
+		
+    	
 	</dependencies>
 </project>
