--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   postgres:
-    container_name: postgres_container
+    container_name: bpk_postgres
     image: postgres:14.3
     command:
       - "postgres"
@@ -60,7 +60,7 @@ services:
     networks:
       - postgres
   pgadmin:
-    container_name: pgadmin_container
+    container_name: bpk_pgadmin
     image: dpage/pgadmin4:5.7
     environment:
       PGADMIN_DEFAULT_EMAIL: "max-kan@outlook.com"
@@ -80,8 +80,8 @@ services:
       - postgres
     profiles:
       - debug
-  postgres_exporter:
-    container_name: exporter_container
+  exporter:
+    container_name: bpk_exporter
     image: prometheuscommunity/postgres-exporter:v0.10.0
     environment:
       DATA_SOURCE_URI: "postgres:5432/bpk?sslmode=disable"
@@ -103,16 +103,20 @@ services:
     profiles:
       - debug
   backend:
-    container_name: bp-keeper-backend
-    image: maven:3.6.3-jdk-8
-    volumes:
-      - "./backend:."
-    command: mvn clean generate-sources
-    command: mvn package
-    command: java -jar bp-keeper-0.0.1-SNAPSHOT.jar
-    profiles:
-      - test
+    container_name: bpk_backend
+    image: bpk_backend
+    environment:
+      BP_KEEPER_NAME: ${BP_KEEPER_NAME}
+      BP_KEEPER_TOKEN: ${BP_KEEPER_TOKEN}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - postgres
+#      - hostnet
     
 networks:
   postgres:
     driver: bridge
+#  hostnet:
+#    network_mode: "host"
