--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,7 @@
 		<slf4j.version>1.7.7</slf4j.version>
 		<log4j.version>2.0.1</log4j.version>
 
+		<application.port>49113</application.port>
 	</properties>
 
 	<dependencies>
@@ -120,7 +121,7 @@
                 <configuration>
 			        <archive>
 			          <manifest>
-			            <mainClass>org.keldeari.bpkeeper.application.BPKeeperApplication</mainClass>
+			            <mainClass>org.keldeari.bpkeeper.BPKeeperApplication</mainClass>
 			          </manifest>
 			        </archive>
 			        <descriptorRefs>
@@ -154,7 +155,7 @@
 				
 					<jdbc>
 						<driver>org.postgresql.Driver</driver>
-						<url>jdbc:postgresql://localhost:5432/bpk</url>
+						<url>jdbc:postgresql://localhost:${application.port}/bpk</url>
 						<user>postgres</user>
 						<password>postgres</password>
 					</jdbc>
